Sample_YAMLs/deploymentconfig-console.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  annotations:
    app.openshift.io/vcs-ref: console
    app.openshift.io/vcs-uri: 'https://github.com/sandeepved/DO180-apps.git'
    openshift.io/generated-by: OpenShiftWebConsole
  selfLink: >-
    /apis/apps.openshift.io/v1/namespaces/sandeepv-sg-console/deploymentconfigs/console
  resourceVersion: '2717199'
  name: console
  uid: 852683aa-b20e-46d8-b886-8579df7a10c1
  creationTimestamp: '2020-11-08T11:09:34Z'
  generation: 2
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: apps.openshift.io/v1
      time: '2020-11-08T11:09:34Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:app.openshift.io/vcs-ref': {}
            'f:app.openshift.io/vcs-uri': {}
            'f:openshift.io/generated-by': {}
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/name': {}
            'f:app.kubernetes.io/part-of': {}
            'f:app.openshift.io/runtime': {}
            'f:app.openshift.io/runtime-version': {}
        'f:spec':
          'f:replicas': {}
          'f:selector':
            .: {}
            'f:app': {}
            'f:deploymentconfig': {}
          'f:strategy':
            'f:activeDeadlineSeconds': {}
            'f:rollingParams':
              .: {}
              'f:intervalSeconds': {}
              'f:maxSurge': {}
              'f:maxUnavailable': {}
              'f:timeoutSeconds': {}
              'f:updatePeriodSeconds': {}
            'f:type': {}
          'f:template':
            .: {}
            'f:metadata':
              .: {}
              'f:creationTimestamp': {}
              'f:labels':
                .: {}
                'f:app': {}
                'f:deploymentconfig': {}
            'f:spec':
              .: {}
              'f:containers':
                .: {}
                'k:{"name":"console"}':
                  .: {}
                  'f:imagePullPolicy': {}
                  'f:name': {}
                  'f:ports':
                    .: {}
                    'k:{"containerPort":8080,"protocol":"TCP"}':
                      .: {}
                      'f:containerPort': {}
                      'f:protocol': {}
                    'k:{"containerPort":8443,"protocol":"TCP"}':
                      .: {}
                      'f:containerPort': {}
                      'f:protocol': {}
                  'f:resources': {}
                  'f:terminationMessagePath': {}
                  'f:terminationMessagePolicy': {}
              'f:dnsPolicy': {}
              'f:restartPolicy': {}
              'f:schedulerName': {}
              'f:securityContext': {}
              'f:terminationGracePeriodSeconds': {}
    - manager: openshift-controller-manager
      operation: Update
      apiVersion: apps.openshift.io/v1
      time: '2020-11-08T11:10:18Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:spec':
          'f:template':
            'f:spec':
              'f:containers':
                'k:{"name":"console"}':
                  'f:image': {}
          'f:triggers': {}
        'f:status':
          'f:updatedReplicas': {}
          'f:readyReplicas': {}
          'f:conditions':
            .: {}
            'k:{"type":"Available"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:status': {}
              'f:type': {}
            'k:{"type":"Progressing"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:reason': {}
              'f:status': {}
              'f:type': {}
          'f:details':
            .: {}
            'f:causes': {}
            'f:message': {}
          'f:replicas': {}
          'f:availableReplicas': {}
          'f:observedGeneration': {}
          'f:unavailableReplicas': {}
          'f:latestVersion': {}
  namespace: sandeepv-sg-console
  labels:
    app: console
    app.kubernetes.io/component: console
    app.kubernetes.io/instance: console
    app.kubernetes.io/name: php
    app.kubernetes.io/part-of: php-helloworld
    app.openshift.io/runtime: php
    app.openshift.io/runtime-version: '7.3'
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - console
        from:
          kind: ImageStreamTag
          namespace: sandeepv-sg-console
          name: 'console:latest'
        lastTriggeredImage: >-
          image-registry.openshift-image-registry.svc:5000/sandeepv-sg-console/console@sha256:6105f16d16901e1ba5c88d1cb1d06aca574a79308eab27eb47a617e620e719b7
    - type: ConfigChange
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    app: console
    deploymentconfig: console
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: console
        deploymentconfig: console
    spec:
      containers:
        - name: console
          image: >-
            image-registry.openshift-image-registry.svc:5000/sandeepv-sg-console/console@sha256:6105f16d16901e1ba5c88d1cb1d06aca574a79308eab27eb47a617e620e719b7
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
status:
  observedGeneration: 2
  details:
    message: config change
    causes:
      - type: ConfigChange
  availableReplicas: 1
  unavailableReplicas: 0
  latestVersion: 1
  updatedReplicas: 1
  conditions:
    - type: Available
      status: 'True'
      lastUpdateTime: '2020-11-08T11:10:17Z'
      lastTransitionTime: '2020-11-08T11:10:17Z'
      message: Deployment config has minimum availability.
    - type: Progressing
      status: 'True'
      lastUpdateTime: '2020-11-08T11:10:18Z'
      lastTransitionTime: '2020-11-08T11:10:18Z'
      reason: NewReplicationControllerAvailable
      message: replication controller "console-1" successfully rolled out
  replicas: 1
  readyReplicas: 1
